# plutus-v2-contracts

./: README.md  cabal.project  env.sh  isDatumData.json  plutus-scripts.cabal  validator.txt
app/: crypto-policy.hs
scripts/: crypto-token.plutus  datum_style.json  final_red.json  mintCryptoToken.sh  new.json  redeemer.json  redemer_1.json  signCryptoTX.sh  tokenMint.signed  tokenMint.unsigned
src/: LockPool.hs  Randao.hs
src/minting-policy/: CryptoToken.hs  ScamDetector.hs
src/project-idea/: EscrowNFT.hs  NegativeRTimed.hs
src/project-idea/outputs/: full-tx.body  full-tx.signed  submit-tx.sh  unlock-funds-tx.sh  unlock-funds.body  unlock-funds.signed
src/project-idea/tests/: PTEscrowNFT.hs  PTPioneer.hs
src/project-idea/utilities/: Utils.hs
src/state-machines/: TokenProposalSM.hs
test-address/: escrow.addr  payment.addr  payment.skey  payment.vkey  paymentwithstake.addr  stake-registration.cert  stake.skey  stake.vkey
